Cleanup and fixing confirmpage

--- a/movie-frontend/src/app/corporate-header/corporate-header.component.html
+++ b/movie-frontend/src/app/corporate-header/corporate-header.component.html
@@ -7,7 +7,7 @@
     </div>
     <nav class="navigation">
       <ul>
-        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/main">Home</a></li>
         <li><a [routerLink]="['/corporate/main/movies']">Manage Movies</a></li>
         <li><a [routerLink]="['/corporate/main/users']">Manage Customers</a></li>
         <li><a [routerLink]="['/corporate/main/bookings']">Manage Bookings</a></li>
