--- a/movie-frontend/src/app/movie-card/movie-card.component.html
+++ b/movie-frontend/src/app/movie-card/movie-card.component.html
@@ -12,6 +12,6 @@
     Rating: {{movie.rating}} /10
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="onBuyTicket(movie)">Buy Tickets!</button>
+    <button mat-button class="buy-button" (click)="onBuyTicket(movie)">Buy Tickets!</button>
   </mat-card-actions>
 </mat-card>
