--- a/movie-frontend/src/app/header/header.component.html
+++ b/movie-frontend/src/app/header/header.component.html
@@ -7,8 +7,8 @@
     </div>
     <nav class="navigation">
       <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a href="#">Movies</a></li>
+        <li><a routerLink="/main">Home</a></li>
+        <li><a href="/main">Movies</a></li>
         <li><a href="#">Extras</a></li>
         <li><a href="#">Members</a></li>
         <li><a href="#">Shop</a></li>
