--- a/movie-frontend/src/app/movie-card/movie-card.component.css
+++ b/movie-frontend/src/app/movie-card/movie-card.component.css
@@ -15,3 +15,16 @@ img{
 p{
   padding-bottom: 10px;
 }
+
+.buy-button {
+  border: 2px solid #d32f2f;
+  color: #007bff;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.buy-button:hover {
+  background-color: #d32f2f;
+  color: #fff;
+  cursor: pointer;
+}
+
